RichwoodNew/src/objects/Collection__c.object
<CustomObject>
    <description>Object to track customer collections for past due invoices.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Required__c</fullName>
        <inlineHelpText>Does this contact need a follow up call?</inlineHelpText>
        <label>Follow Up Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main Accounts Payable contact.</description>
        <inlineHelpText>Start typing a name to search for a contact, or create a new contact.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Backup Accounts Payable Contact</description>
        <inlineHelpText>Start typing the contact&apos;s name to search, or create a new contact.</inlineHelpText>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Collections (Secondary Contact)</relationshipLabel>
        <relationshipName>Collections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Awaiting Payment</fullName>
                </value>
                <value>
                    <fullName>Closed - Paid</fullName>
                </value>
                <value>
                    <fullName>Closed - Write Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Collection</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COL-{00000}</displayFormat>
        <label>Collection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>